Hide overflow on page to prevent horizontal scrolling on mobile

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -6019,6 +6019,10 @@ button.bc-btn.bc-cart-actions__checkout-button {
 
 /* Overrides */
 
+.content-wrapper {
+  overflow: hidden;
+}
+
 .bc-btn {
   background-color: black !important;
 }
